<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">The <xliff:g id="tp" translatable="false">Purramid</xliff:g></string>
    <string name="app_widget_description">Launch a Purramid class management tool</string>
    <string name="enable_overlay">Enable Overlay</string>
    <string name="overlay_permission_denied">Overlay permission denied</string>
    <string name="clock_title">Clock</string>
    <string name="randomizers_title">Randomizers</string>
    <string name="screen_mask_title">Screen Mask</string>
    <string name="spotlight_title">Spotlight</string>
    <string name="timers_title">Timers</string>
    <string name="traffic_light_title">Traffic Light</string>
    <string name="about">About this App</string>
    <string name="snackbar_action_ok">OK</string>
    <string name="pause">Pause Button</string>
    <string name="pause_accessible">A Pause button to temporarily stop time.</string>
    <string name="play">Start</string>
    <string name="play_accessible">A Start button to begin time</string>
    <string name="reset">Reset Button</string>
    <string name="reset_accessible">A Reset button to return time to its default</string>
    <string name="settings">Settings</string>
    <string name="settings_accessible">A Settings button to open a customization window</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="app_color">Color</string>
    <string name="color_white">White</string>
    <string name="color_white_accessible">Make your clock background white</string>
    <string name="color_black">Black</string>
    <string name="color_black_accessible">Make your clock background black</string>
    <string name="color_goldenrod">Goldenrod</string>
    <string name="color_goldenrode_accessible">Make your clock background goldenrod</string>
    <string name="color_teal">Teal</string>
    <string name="color_teal_accessible">Make your clock background teal</string>
    <string name="color_lightblue">Light Blue</string>
    <string name="color_lightblue_accessible">Make your clock background light blue</string>
    <string name="color_violet">Violet</string>
    <string name="color_violet_accessible">Make your clock background violet</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="optimize">Optimize</string>
    <string name="clock_settings_title">Clock Settings</string>
    <string name="enable_floating_clock">Enable Floating Clock</string>
    <string name="clock_mode">Clock Type</string>
    <string name="analog">Analog</string>
    <string name="digital">Digital</string>
    <string name="am_designator">AM</string>
    <string name="pm_designator">PM</string>
    <string name="clock_setting_24_hour">24-Hour Clock</string>
    <string name="set_time_zone">Set Time Zone</string>
    <string name="error_loading_model">Unable to load model: %1$s</string>
    <string name="error_loading_texture">Unable to load texture: %1$s</string>
    <string name="error_creating_texture">Unable to create texture: %1$s</string>
    <string name="display_seconds">Display Seconds</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="nest_clock">Nest Clock</string>
    <string name="add_another_clock">Add another Clock</string>
    <string name="city_mindelo">Mindelo</string>
    <string name="city_ponta_delgada">Ponta Delgada</string>
    <string name="city_praia">Praia</string>
    <string name="city_lagoa">Lagoa</string>
    <string name="city_honolulu">Honolulu</string>
    <string name="set_time">Set Time</string>
    <string name="hundredths">Hundredths</string>
    <string name="play_music">Play music</string>
    <string name="lap">Lap Times</string>
    <string name="sounds">Stopwatch sounds</string>
    <string name="version_number">Version 0.1</string>
    <string name="purramid_copyright_title">The <xliff:g id="tp" translatable="false">Purramid</xliff:g></string>
    <string name="purramid_copyright_text">Copyright © 2025 <xliff:g id="tpl" translatable="false">Purramid Learning®, Inc.</xliff:g> All rights reserved.</string>
    <string name="balsamiq_sans_title"><xliff:g id="bf" translatable="false">Balsamiq</xliff:g> Sans Font</string>
    <string name="balsamiq_sans_license_text">Copyright © 2011 The <xliff:g id="bfpa" translatable="false">Balsamiq Sans Project Authors</xliff:g> (https://github.com/balsamiq/balsamiqsans)\nThis Font Software is licensed under the SIL Open Font License, Version 1.1 .\nThis license is copied below, and is also available with a FAQ at: https://openfontlicense.org\n\nSIL OPEN FONT LICENSE Version 1.1 - 26 February 2007</string>
    <string name="sphere_title">3D Sphere</string>
    <string name="sphere_attribution_text">"sphere-gltf-example" (https://skfb.ly/6XGzq) by <xliff:g id="raw" translatable="false">rawwerks</xliff:g> is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).</string>
    <string name="cities_database_title">World Cities Database</string>
    <string name="cities_database_attribution_text">"World Cities Database" (https://simplemaps.com/data/world-cities) by <xliff:g id="sm" translatable="false">simplemaps</xliff:g> is also licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).</string>
    <string name="data_privacy_title">Data Privacy (USA &amp; EU)</string>
    <string name="data_privacy_statement">At <xliff:g is="tpl" translatable="false">Purramid Learning, Inc.</xliff:g>, we are committed to your privacy. This application, The <xliff:g id="tp" translatable="false">Purramid</xliff:g>, does not collect, share, or transmit any personal data away from the device on which it is installed. All data generated and used within the application remains solely on your device.</string>
    <string name="best_practices_title">Best Practices for Responsible Use</string>
    <string name="best_practices_content">While The <xliff:g id="tp1" translatable="false">Purramid</xliff:g> application is designed to operate locally and does not collect or transmit personal data, we encourage users to adopt responsible practices when using the application, especially in educational or collaborative settings. We recommend the following:
        \n\n* Avoid Storing Identifiable Information: To further safeguard privacy, we advise against directly storing personally identifiable information (PII) such as full names, specific addresses, or other sensitive details within the application\'s content or file names. Consider using anonymized labels or codes if necessary for your workflow.
        \n* Mindful Sharing (If Applicable): If you choose to share files or content created with The <xliff:g id="tp2" translatable="false">Purramid</xliff:g> application, be mindful of the information contained within them and ensure they do not inadvertently include sensitive personal data.
        \n* Secure Your Device: As all application data is stored locally on your device, ensure your device itself is secured with appropriate measures such as strong passwords or biometric authentication to prevent unauthorized access.
        \n* Regular Backups: While not related to privacy, regularly backing up your application data is a good practice to prevent data loss.</string>
    <string name="acknowledgements_title">Acknowledgements</string>
    <string name="acknowledgements_content">The development of The <xliff:g id="tp1" translatable="false">Purramid</xliff:g> application involved the use of advanced artificial intelligence models, including <xliff:g id="gg" translatable="false">Gemini</xliff:g>, for code generation and assistance. We leveraged these tools to enhance the efficiency of our development process.
        \n\nWe also want to explicitly acknowledge that all visual art and assets included within The <xliff:g id="tp2" translatable="false">Purramid</xliff:g> application were created by human artists who were fairly compensated for their work. We believe in supporting the creative community and ensuring ethical practices in the creation of our application\'s design.</string>
    <string name="eula_title">End User License Agreement</string>
    <string name="eula_content">IMPORTANT - READ CAREFULLY: This End User License Agreement ("EULA") is a legal agreement between you (the "User") and <xliff:g id="tpl" translatable="false">Purramid Learning, Inc.</xliff:g> ("Licensor") for The <xliff:g id="tp" translatable="false">Purramid</xliff:g> application (the "Application").
        \n\nBy installing, copying, or otherwise using the Application, the User agrees to be bound by the terms of this EULA. If the User does not agree to the terms of this EULA, do not install or use the Application.
        \n\n1. License Grant: The Licensor grants the User a non-exclusive, non-transferable, limited license to use the Application solely for the User\'s personal, non-commercial use on a single device.
        \n\n2. Ownership: The Application is owned by the Licensor and is protected by copyright laws and international treaty provisions. The Licensor retains all rights, title, and interest in and to the Application.
        \n\n3. Restrictions: The User may not:
        \n    * Reverse engineer, decompile, or disassemble the Application, except and only to the extent that such activity is expressly permitted by applicable law notwithstanding this limitation.
        \n    * Modify or create derivative works based upon the Application.
        \n    * Distribute, sublicense, rent, lease, or lend the Application to any third party.
        \n    * Remove or alter any copyright notices or other proprietary markings on or within the Application.
        \n\n4. Disclaimer of Warranty: THE APPLICATION IS PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NONINFRINGEMENT. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE APPLICATION IS WITH THE USER. SHOULD THE APPLICATION PROVE DEFECTIVE, THE USER ASSUMES THE ENTIRE COST OF ANY SERVICING, REPAIR, OR CORRECTION.
        \n\n5. Limitation of Liability: TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, IN NO EVENT SHALL THE LICENSOR BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES (INCLUDING WITHOUT LIMITATION DAMAGES FOR LOSS OF PROFITS, DATA, USE, GOODWILL, OR OTHER INTANGIBLE LOSSES) ARISING OUT OF OR RELATING TO THE USER\'S ACCESS TO, USE OF, OR INABILITY TO ACCESS OR USE THE APPLICATION, EVEN IF THE LICENSOR HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
        \n\n6. Termination: This EULA is effective until terminated. The User may terminate this EULA by uninstalling the Application. This EULA will terminate automatically without notice from the Licensor if the User fails to comply with any provision of this EULA. Upon termination, the User must cease all use of the Application and destroy all copies thereof.
        \n\n7. Governing Law: This EULA shall be governed by and construed in accordance with the laws of the State of New Hampshire, without regard to its conflict of law provisions.
        \n\n8. Entire Agreement: This EULA constitutes the entire agreement between the User and the Licensor concerning the Application and supersedes all prior or contemporaneous communications and proposals, whether oral or written, between the User and the Licensor with respect to the Application.</string>
    <string name="contact_information_title">Contact Information</string>
    <string name="contact_information_text">Your mailed feedback and requests are welcome at <xliff:g id="tpl" translatable="false">379&#8211;121 Amherst St., Nashua, NH 03063, USA.</xliff:g></string>
</resources>